examples/test/testpolicy18696.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18696
  namespace: namespace204
spec:
  podSelector:
    matchLabels:
      key19: value14
      key41: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value28
          key20: value25
          key36: value20
      podSelector:
        matchLabels:
          key48: value22
          key4: value20
